2006-04-23 Roy Rankin <rrankin@ihug.com.au>
      * src/gpsim_object.h src/gpsim_object.cc gui/gui_breadboard.h
        gui/gui_breadboard.cc: Allow pin names to be changed after breadboard
	is started.
      * src/stimuli.cc: minor output format change and new debuging output

2006-04-22 Roy Rankin <rrankin@ihug.com.au>
	* modules/switch.cc modules/switch.h: fix windows regression problem

2006-04-17 J.R. Heisey <jrheisey@sourceforge.com
	* cli/cmd_module.cc, src\os_dependent.cc: Changed env var
	from GPSIMPATH to GPSIM_MODULE_PATH.

2006-04-17 Scott Dattalo <scott@dattalo.com>
	* modules/gpsim_modules.cc, modules/push_button.cc,
	modules/resistor.cc, modules/push_button.h, modules/resistor.h,
	modules/encoder.cc, modules/encoder.h, modules/Makefile.am:
	- Removed references to the deprecated IOPORT class. 
	- Temporarily removed the video and the parallel_port modules (I
	  don't have a way to test them).
	- The push button module can now be used again.

2006-04-17 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in: added the explanation why the warning is good:
	  warning: `I' flag used with `%x' printf format
	* cli/cli.vcproj, modules.vcproj, modules/makefile.mingw,
	  plat/win32/libgpsim.def: WIN32 sync

2006-04-16 Scott Dattalo <scott@dattalo.com>
	* modules/binary_indicator.cc,h: removed from gpsim. This module
	did absolutely nothing.
	* modules/gpsim_modules.cc, modules/Makefile.am: removed
	references to the binary_indicator.

2006-04-16 Scott Dattalo <scott@dattalo.com>
	* modules/ttl.cc: TTLbase now calls initializeAttributes(). This
	defines xpos and ypos attributes.
	* regression/ttl/ttl377.asm: xpos and ypos are initialized by the
	builtin script.
	* modules/led.cc, modules/led.h: Redesigned I/O pins to remove
	references to the deprecated IOPORT class.
	* modules/gpsim_modules.cc: Place Led classes in their own
	namespace.

2006-04-16 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in: fixed bug [ 1470012 ] Breakpoints regression