@@ -84,17 +84,16 @@ string gpsimObject::show()
 
 void gpsimObject::new_name(const char *s)
 {
-  name_updated = TRUE;
+  name_updated = true;
 
   if(s)
-  {
-    name_updated = TRUE;
     name_str = string(s);
-  }
+
 }
 
 void gpsimObject::new_name(string &new_name)
 {
+  name_updated = true;
   name_str = new_name;
 }
 
