@@ -25,10 +25,6 @@ Boston, MA 02111-1307, USA.  */
 
 #include <string>
 using namespace std;
-#ifndef FALSE
-#define FALSE 0
-#define TRUE  1
-#endif
 
 class BreakType;
 
@@ -92,7 +88,7 @@ class gpsimObject {
   virtual int clear_break();
 
   virtual bool get_name_updated(void) { return name_updated; }
-  virtual void clr_name_updated(void) { name_updated = FALSE; }
+  virtual void clr_name_updated(void) { name_updated = false; }
 
 protected:
 
